# portfolio-optimizer

./: .gitignore  app.py  pyproject.toml  sandbox.py
data_example/: BEAR_data.csv  LION_data.csv  WOLF_data.csv
src/portfolio_optimizer/: __init__.py  portfolio_optimizer.py
src/portfolio_optimizer/domain/: __init__.py  base_stock_fetcher.py  mock_stock_fetcher.py  stock_repository.py  yfinance_stock_fetcher.py
src/stock_getter/: __init__.py  csv_stock_getter.py  mock_stock_getter.py  stock_getter.py  utils.py
stock_repository/: A.csv  AAF.L.csv  AAF.csv  AAL.L.csv  AAL.csv  AAPL.csv  ABBV.csv  ABF.L.csv  ABF.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.L.csv  ADM.csv  ADP.csv  ADS.DE.csv  ADS.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AHT.L.csv  AHT.csv  AIG.csv  AIR.DE.csv  AIR.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  ALV.DE.csv  ALV.csv  ALW.L.csv  (+741 more)
tests/: conftest.py
tests/data/: BEAR_data.csv  BULL_data.csv  DOG_data.csv  LION_data.csv  WOLF_data.csv  example_stocks.csv
tests/portfolio_optimizer/: test_portfolio_optimizer.py
tests/portfolio_optimizer/domain/: test_mock_stock_fetcher.py  test_stock_repository.py
tests/stock_getter/: test_mock_stock_getter.py
